--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.10",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "gsap": "^3.12.4",
     "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
